--- a/rpi-virtuell.css
+++ b/rpi-virtuell.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ebebeb;
+  background-color: #6AA4C3;
   width: 800px;
   margin: 0 auto;
   padding-top: 20px;
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-  color: #2e9ec9;
+  color: 1B638A;
 }
 
 h2 {
