--- a/rpi-virtuell.css
+++ b/rpi-virtuell.css
@@ -24,14 +24,14 @@ li b {
 
 h2 a {
   text-decoration: none;
-  color: #444444;
+  color: #1B638A;
   text-shadow: 1px 1px 0px white;
 }
 
 h3 {
   font-family: Roboto;
   font-size: 24px;
-  color: #444444;
+  color: #1B638A;
   text-shadow: 1px 1px 0px white;
 }
 
@@ -52,7 +52,7 @@ ul>li {
   padding-right: 40px;
   padding-bottom: 60px;
   background: #fff;
-  color: #444444;
+  color: #1B638A;
   -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
      -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
           box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
